# ExpenseAnalyzer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
expense_analyzer/: adapters.py  cli.py  db.py  importer.py  ui.py
spec/: 01-project-setup.md  02-csv-import.md  03-database.md  04-month-boundary.md  05-recurring-detection.md  06-prediction.md  07-output.md  08-hole-detection.md  09-stats.md  10-multiple-accounts.md  11-deposits.md  12-csv-adapters.md  13-fastapi.md  14-streamlit-ui.md  15-charts.md  16-docker.md  17-groups.md  18-type-safety.md  19-linting.md  20-current-month-prediction.md  21-grouping-toggle.md  22-exclude-group-from-prediction.md  23-group-colors.md  24-group-color-improvements.md  25-current-month-breakpoint.md  26-trend-line.md  27-quarterly-phase-anchor.md  28-group-icons.md
tests/: test_accounts.py  test_adapters.py  test_calendar_utils.py  test_chart_data.py  test_groups.py  test_importer.py  test_output.py  test_predictor.py  test_recurring.py  test_stats.py  test_ui.py
utgiftsanalys/: adapters.py  calendar_utils.py  chart_data.py  cli.py  db.py  importer.py  output.py  predictor.py  recurring.py  stats.py  ui.py
