[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utgiftsanalys"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "chardet>=5.0",
    "holidays>=0.46",
    "tabulate>=0.9",
]

[project.scripts]
utgiftsanalys = "utgiftsanalys.cli:main"

[project.optional-dependencies]
ui = ["streamlit>=1.35", "altair>=5.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
