[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utgiftsanalys"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "chardet>=5.0",
    "holidays>=0.46",
    "tabulate>=0.9",
]

[project.scripts]
utgiftsanalys = "utgiftsanalys.cli:main"

[project.optional-dependencies]
ui = ["streamlit>=1.35", "altair>=5.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "types-tabulate",
    "pre-commit>=3.7",
    "ruff>=0.4",
]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]

[tool.mypy]
strict = true
python_version = "3.11"
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["holidays.*", "chardet.*", "pandas.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N"]

[tool.ruff.lint.isort]
known-first-party = ["utgiftsanalys"]
